@@ -519,7 +519,7 @@ static void tokenizer_process (dfsch_parser_ctx_t *ctx, char* data){
   while (*data){
     switch (ctx->tokenizer_state){
     case T_NONE:
-      while(*data==' ' || *data=='\n' || *data == '\t'){
+      while(*data==' ' || *data=='\n' || *data == '\t' || *data == '\r'){
         ctx->column++;
         if (*data == '\n'){
           ctx->column = 1;
@@ -602,7 +602,7 @@ static void tokenizer_process (dfsch_parser_ctx_t *ctx, char* data){
       case '.':
 	++data;
 
-	if (*data==' ' || *data=='\n' || *data=='\t' || 
+	if (*data==' ' || *data=='\n' || *data=='\t' || *data=='\r' ||
 	    *data==0   || *data=='('  || *data==')'){
           ctx->column++;
 	  parse_dot(ctx);
@@ -619,7 +619,7 @@ static void tokenizer_process (dfsch_parser_ctx_t *ctx, char* data){
       break;
     case T_ATOM:
       {
-	char *e = strpbrk(data, "() \t\n;");
+	char *e = strpbrk(data, "() \t\n\r;");
 	if (!e){
           consume_queue(ctx->q, data);
 	  return;
@@ -724,7 +724,7 @@ static void tokenizer_process (dfsch_parser_ctx_t *ctx, char* data){
       {
         unsigned char c = *data;
         if ((c>='a' && c<= 'z') || (c>='A' && c<= 'Z')){
-          char *e = strpbrk(data, "() \t\n;");
+          char *e = strpbrk(data, "() \t\n\r;");
           if (!e){
             consume_queue(ctx->q, data);
             return;
